--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,15 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_owner">Owner</string>
+    <string name="title_activity_saloon_location">Map</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_booking">Booking</string>
+    <string name="title_activity_maps_booking">Map</string>
+
+
+    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
+    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
+    <string name="title_activity_nearby_saloon_list">NearbySaloonList</string>
+    <string name="title_activity_saloon_deatils">SaloonDeatils</string>
 
 </resources>
