--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,9 @@
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
     <string name="title_activity_nearby_saloon_list">NearbySaloonList</string>
     <string name="title_activity_saloon_deatils">SaloonDeatils</string>
-
+    <string-array name="Gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+    <string name="spinner_title">Gender</string>
 </resources>
